--- a/Directorio/Components/Pages/Home.razor
+++ b/Directorio/Components/Pages/Home.razor
@@ -1,5 +1,6 @@
 ﻿@page "/"
 @inject NavigationManager _navigationManager
+@inject IRepositorioPersonas _repositorioPersonas
 <PageTitle>Personas</PageTitle>
 
 <h1>Personas</h1>
@@ -20,6 +21,8 @@ else
                 <th>Id</th>
                 <th>Nombre</th>
                 <th>Correo</th>
+                <th>Clasificación</th>
+                <th>Hábitos</th>
                 <th>Acciones</th>
             </tr>
         </thead>
@@ -30,6 +33,13 @@ else
                     <td>@persona.Id</td>
                     <td>@persona.Nombre</td>
                     <td>@persona.Correo</td>
+                    <td>@persona.Clasificacion!.Nombre</td>
+                    <td>
+                        @foreach (var habito in persona.Habitos)
+                        {
+                            <span class="badge bg-secondary ms-1">@habito.Nombre</span>
+                        }
+                    </td>
                     <td>
                         <button class="btn btn-outline-success" @onclick="() => Editar(persona.Id)" title="Editar">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
@@ -50,12 +60,12 @@ else
 }
 
 @code {
-    private List<Persona> _personas = new List<Persona>
-                                            {
-                                                new Persona { Id=1, Nombre = "Juan", Correo="corre1@ucol.mx" },
-                                                new Persona { Id=2, Nombre = "Pedro", Correo="corre2@ucol.mx" },
-                                                new Persona { Id=3, Nombre = "Carlos", Correo="corre2@ucol.mx" }
-                                            };
+    private List<Persona>? _personas;
+
+    protected override async Task OnInitializedAsync()
+    {
+        _personas = await _repositorioPersonas.GetAll();
+    }
 
     private void Editar(int id)
     {
